doc: added design doc

--- a/experiments/image_generator.ipynb
+++ b/experiments/image_generator.ipynb
@@ -21,7 +21,7 @@
     "    output_path,\n",
     "    colormode='binary',\n",
     "    hierarchical='cutout',\n",
-    "    mode='polygon',            # use 'spline' if your art is very curvy\n",
+    "    mode='spline',            # use 'spline' if your art is very curvy\n",
     "    filter_speckle=30,\n",
     "    corner_threshold=200,\n",
     "    length_threshold=40,\n",
